fix text overlapping

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -475,7 +475,7 @@
 
 @media screen and (max-width: 430px) {
   .mooha {
-    display: none;
+    /* display: none; */
   }
 }
 
